--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-This is my website. More to come. Is this working? 
+This is my website. It  is in progress. Check back for updates!
 </body>
 
 </html>
