updated temporaty site text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-This is my website. It  is in progress. Check back for updates!
+This is my website. It's in progress. Check back later for updates!
 </body>
 
 </html>
