added contact info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-This is my website. It's in progress. Check back later for updates!
+
+<h2> Page under construction. Please check back later, after I learn HTML and CSS. </h2>
+
+<p> For more information, contact loganrsweet@gmail.com </p>
+
 </body>
 
 </html>
