--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <h2> Page under construction. Please check back later, after I learn HTML and CSS. </h2>
 
+<h1> look at this edit </h1>
+
 <p> For more information, contact loganrsweet@gmail.com </p>
 
 </body>
