--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is the heading of my first section.</h3>
 
-<p>This is a brief paragrapg explaining some things about me. here is an example of a  <a href="https://guides.github.com/features/mastering-markdown/">link to another page</a>, which I can use as a template to link to somethign like the OWL website. 
+<p>This is a brief paragrapg explaining some things about me. here is an example of a  <a href="www.linkedin.com/in/logansweet">link to another page</a>, which I can use as a template to link to somethign like the OWL website. 
 </p>
 
 <h3>
