--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Logan Sweet by LoganSweet</title>
+    <title>Logan Sweet</title>
   </head>
   <body>
-    This will be Logan's website
+    This will be Logan's website onces she makes it
   </body>
 </html>
