--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Logan Sweet</title>
   </head>
   <body>
-    This will be Logan's website onces she makes it
+    This will be Logan's website onces she makes it. 
+    It is time to widget test. 
+    
   </body>
 </html>
