--- a/index.html
+++ b/index.html
@@ -8,4 +8,16 @@
     It is time to widget test. 
     
   </body>
+  
+  <div id="advocacy-actionwidget" data-domain="p2a.co" data-shorturl="oU8PMIf" style="max-width: 450px; height: 815px;"></div>
+<script>
+(function ( d, s, id ) {
+var js, fjs = d.getElementsByTagName( s )[0];
+if ( d.getElementById( id ) ) return;
+js = d.createElement( s );
+js.id = id;
+js.src = '//p2a.co/js/embed/widget/advocacywidget.min.js';
+fjs.parentNode.insertBefore( js, fjs );
+} ( document, 'script', 'advocacy-actionwidget-code' ));
+</script>
 </html>
