--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Logan Sweet</title>
   </head>
   <body>
-    This will be Logan's website onces she makes it. 
-    It is time to widget test. 
+   Testing 1 
     
   </body>
   
