--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</ul>
 						</div>
 						<div class="image image-position-right">
-							<img src="images/hextalhero.jpg" alt="" />
+							<img src="images/hextalhero.JPG" alt="" />
 						</div>
 					</section>
 
@@ -66,7 +66,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/view2.jpg" alt="" />
+							<img src="images/view2.JPG" alt="" />
 						</div>
 					</section>
 
