--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</ul>
 						</div>
 						<div class="image image-position-right">
-							<img src="images/hextalhero.jpg" alt="" />
+							<img src="images/hextalhero.png" alt="" />
 						</div>
 					</section>
 
