--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/view2.jpeg" alt="" />
+							<img src="images/view2.jpg" alt="" />
 						</div>
 					</section>
 
