--- a/ProjectLibraryPlanters.html
+++ b/ProjectLibraryPlanters.html
@@ -35,66 +35,59 @@
 							</section>
 						</div>
 
-						<div class="gallery style2 medium lightbox onscroll-fade-in">
+						<div class="gallery style1 medium lightbox onscroll-fade-in">
 								
-
 								<article>
 									<a href="images/gallery/PLANTS/Plans2.jpg" class="image">
-										<img src="images/gallery/PLANTS/Plans2.jpg" alt="" />
+										<img src="images/gallery/PLANTS/Plans2sq.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Initial sketches</h3>
 									</div>
 								</article>
 
 								<article>
 									<a href="images/gallery/PLANTS/build2.jpg" class="image">
-										<img src="images/gallery/PLANTS/build2.jpg" alt="" />
+										<img src="images/gallery/PLANTS/build2sq.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>The floor of each planter fit snugly</h3>
 									</div>
 								</article>
 
 								<article>
 									<a href="images/gallery/PLANTS/build3.jpg" class="image">
-										<img src="images/gallery/PLANTS/build3.jpg" alt="" />
+										<img src="images/gallery/PLANTS/build3sq.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>A partially-assembled planter</h3>
 									</div>
 								</article>
 
 								<article>
 									<a href="images/gallery/PLANTS/view4.jpg" class="image">
-										<img src="images/gallery/PLANTS/view4.jpg" alt="" />
+										<img src="images/gallery/PLANTS/view4sq.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Completed small planter</h3>
 									</div>
 								</article>
 
 								<article>
 									<a href="images/gallery/PLANTS/view6.jpg" class="image">
-										<img src="images/gallery/PLANTS/view6.jpg" alt="" />
+										<img src="images/gallery/PLANTS/view6sq.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>A cluster of planters in the library</h3>
 									</div>
 								</article>
 
 								<article>
 									<a href="images/gallery/PLANTS/logan.png" class="image">
-										<img src="images/gallery/PLANTS/logan.png" alt="" />
+										<img src="images/gallery/PLANTS/logansq.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Title</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Testing structural intergrity of the planters</h3>
 									</div>
 								</article>
 
