--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="mailto:logan.sweet@students.olin.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/logansweet"target="_blank"  class="icon style2 fa-linkedin"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
