back button on project pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<section class="banner style3 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hi, I'm Logan</h1>
-							<p class="major"><!--[-->I'm a junior at Olin College of Engineering who is passionate about making the world a better place by saving the bees. <!--]--></p>
+							<p class="major"><!--[-->I'm a junior at Olin College of Engineering  <!--]--></p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li>
 								<li><a href="assets/ResumeJan29.pdf"target="_blank" class="button">Download my Resume</a></li>
@@ -95,7 +95,7 @@
 								<li><a href="mailto:logan.sweet@students.olin.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/logansweet"target="_blank"  class="icon style2 fa-linkedin"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Sweet 2017. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
