--- a/ProjectASLGlove.html
+++ b/ProjectASLGlove.html
@@ -75,6 +75,11 @@
 							
 							</div>
 						</div>
+						<header>
+							<ul class="actions">
+								<li><a href="index.html" class="button">Back</a></li>
+							</ul>
+						</header>
 
 						
 				</section>
@@ -84,7 +89,7 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Sweet 2017. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 
 		<!-- Scripts -->
