--- a/ProjectLibraryPlanters.html
+++ b/ProjectLibraryPlanters.html
@@ -94,14 +94,18 @@
 								
 							</div>
 						</div>
-				</section>
 
-							
+						<header>
+							<ul class="actions">
+								<li><a href="index.html" class="button">Back</a></li>
+							</ul>
+						</header>
+				</section>
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Sweet 2017. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 
 		<!-- Scripts -->
