--- a/ProjectLibraryPlanters.html
+++ b/ProjectLibraryPlanters.html
@@ -22,7 +22,7 @@
 
 										<h1>Library Planters</h1>
 										
-										<h4>In the fall of 2015, I worked on a team of four students to do a nine week open ended project. With only the constraint that our final product must include a mechanical, electrical, and software component, we chose to create a glove that interprets American Sign Language Fingerspelling and transmits letters to a cell phone. All designs, code, and instructions to create the glove are public online. </h4>
+										<h4>During the summer of 2015 I worked in the Olin College Library with other students, alumni, faculty, and staff to “rewrite the library.” Our goal was to make the library more accurately reflect the culture of the student body and become a more useful space. As part of those goals, I created a set of eleven custom, modular planters for the library. </h4>
 
 										<span class="image fit"><img src="images/view2.jpg" alt="" /></span>
 
