resume link update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 							<p class="major"><!--[-->I'm a junior at Olin College of Engineering studying electrical and computer engineering.   <!--]--></p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li>
-								<li><a href="assets/ResumeJan29.pdf"target="_blank" class="button">Download my Resume</a></li>
+								<li><a href="assets/Resume217.pdf"target="_blank" class="button">Download my Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
