--- a/ProjectASLGlove.html
+++ b/ProjectASLGlove.html
@@ -22,7 +22,7 @@
 
 										<h1>ASL Glove</h1>
 										
-										<h4>In the fall of 2015, I worked on a team of four students to do a nine week open ended project. With only the constraint that our final product must include a mechanical, electrical, and software component, we chose to create a glove that interprets American Sign Language Fingerspelling and transmits letters to a cell phone. All designs, code, and instructions to create the glove are public online. </h4>
+										<h4>In the fall of 2015, I worked on a team of four students to do a nine week open ended project. With only the constraint that our final product must include a mechanical, electrical, and software component, we chose to create a glove that interprets American Sign Language Fingerspelling and transmits letters to a cell phone. All designs, code, and instructions to create the glove are public online <a href="http://poe.olin.edu/2015/hextal/index.html">here</a>. </h4>
 
 										<span class="image fit"><img src="images/hextalhero.jpg" alt="" /></span>
 
