--- a/ProjectSUITable.html
+++ b/ProjectSUITable.html
@@ -22,7 +22,7 @@
 
 										<h1>SUITable</h1>
 										
-										<h4>As part of the MIT Open Style Lab in summer 2016, I worked on a team with an occupational therapist and two fashion designers to create a garment for our client, Jim. Due to a spinal cord injury, Jim has limited feeling and range of motion in his arms and torso. This made it difficult for him to adjust traditional clothing throughout the day, so we created a customized jacket that he could wear in multiple climates. </h4>
+										<h4>As part of the <a href="http://www.openstylelab.com/">MIT Open Style Lab</a> in summer 2016, I worked on a team with an occupational therapist and two fashion designers to create a garment for our client, Jim. Due to a spinal cord injury, Jim has limited feeling and range of motion in his arms and torso. This made it difficult for him to adjust traditional clothing throughout the day, so we created a customized jacket that he could wear in multiple climates. </h4>
 
 										<span class="image fit"><img src="images/wear2.jpg" alt="" /></span>
 
