added differential difference amp files V1

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 						</div>
 					</section>
 
+				<!-- Differential Difference Amplifier -->
+					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Differential Difference Amplifier</h2>
+							<p>For a class final project I worked with a partner to build and measure as well as simulate three differential difference amplifiers. nMOS and pMOS transistors were breadboarded to collect data, and LTspice was used to simulate. We evaluated each circuit’s incremental output resistance, differential mode voltage gain, and incremental transconductance gain. </p>
+							<ul class="actions vertical">
+								<li><a href="ProjectDifferentialDifferenceAmplifier.html" class="button">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="image image-position-right">
+							<img src="images/BreadBoardCircuit2.jpg" alt="" />
+						</div>
+					</section>
+
 				<!-- SUITable -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
