--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
+
+
+
 				<!-- Banner -->
 					<section class="banner style3 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
@@ -25,6 +28,22 @@
 							<img src="images/profile2.png" alt="" />
 						</div>
 					</section>
+
+
+                <!-- Hapic Wheel -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Haptic Wheel (In Progress!)</h2>
+							<p>For an Elecanisms class project, I created a haptic wheel that operates in a few different modes. I created a simple GUI in pythin, and all control code is written in C and runs on a PIC24 microcontroller.  </p>
+							<ul class="actions vertical">
+								<li><a href="ProjectHapticWheel.html" class="button">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/Wheel1.jpg" alt="" />
+						</div>
+					</section>
+
 
 				<!-- Differential Difference Amplifier -->
 					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
