--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<section class="banner style3 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hi, I'm Logan</h1>
-							<p class="major"><!--[-->I'm a junior at Olin College of Engineering studying electrical and computer engineering.   <!--]--></p>
+							<p class="major"><!--[-->I'm a senior at Olin College of Engineering studying electrical and computer engineering.   <!--]--></p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">See my Work</a></li>
 								<li><a href="assets/LoganSweet_Resume.pdf"target="_blank" class="button">Download my Resume</a></li>
