new profile image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/profile2.png" alt="" />
+							<img src="images/profile_2018.jpg" alt="" />
 						</div>
 					</section>
 
