centered page titles

--- a/ProjectDifferentialDifferenceAmplifier.html
+++ b/ProjectDifferentialDifferenceAmplifier.html
@@ -16,7 +16,7 @@
 
                                         <a href="index.html" class="button">Back</a>
 
-										<h1>Differential Difference Amplifier</h1>
+										<center><h1>Differential Difference Amplifier</h1></center>
 
 										<h4>For a class final project I worked with a partner to build and measure as well as simulate three differential difference amplifiers. nMOS and pMOS transistors were breadboarded to collect data, and LTspice was used to simulate. We evaluated each circuit’s incremental output resistance, differential mode voltage gain, and incremental transconductance gain.  </h4>
 
