--- a/ProjectLibraryPlanters.html
+++ b/ProjectLibraryPlanters.html
@@ -21,7 +21,7 @@
                                         <a href="index.html" class="button">Back</a>
 
 
-										<h1>Library Planters</h1>
+										<center><h1>Library Planters</h1></center>
 
 										<h4>During the summer of 2015 I worked in the Olin College Library with other students, alumni, faculty, and staff to “rewrite the library.” Our goal was to make the library more accurately reflect the culture of the student body and become a more useful space. As part of those goals, I created a set of eleven custom, modular planters for the library. </h4>
 
