fixing bombsquad to conform to naming convention

--- a/ProjectBombDefusalGame.html
+++ b/ProjectBombDefusalGame.html
@@ -14,10 +14,12 @@
                         		<div class="content">
                                         <a href="index.html" class="button">Back</a>
 
-										<h1>Bomb Defusal Penny Arcade Game</h1>
-										<h4>Here will be a description of what the game is for preople </h4>
+										<center><h1>Bomb Defusal Penny Arcade Game</h1></center>
+										<h4>For a final Elecanisms class project my team and I created a collaborative arcade game based on <i>Keep Talking and Nobody Explodes</i>. Our game runs on up to seven PIC24F microcontrollers that communicate via I2C.
 
-                                        <span class="image fitsmaller"><img src="images/BreadBoardCircuit3.jpg" alt="" /></span>
+                                        </h4>
+
+                                        <span class="image fit"><img src="images/bothbombs.jpg" alt="" /></span>
 
 
 
