--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <!-- Hapic Wheel -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Haptic Wheel (In Progress!)</h2>
-							<p>For an Elecanisms class project, I created a haptic wheel that operates in a few different modes. I created a simple GUI in pythin, and all control code is written in C and runs on a PIC24 microcontroller.  </p>
+							<h2>Bomb Defusal Game (Page In Progress!)</h2>
+							<p>For a final Elecanisms class project my team and I created a collaborative arcade game based on <i>Keep Talking and Nobody Explodes</i>. Our game runs on up to seven PIC24F microcontrollers that communicate via I2C, and is modular for different gameplay experiences each time. </p>
 							<ul class="actions vertical">
-								<li><a href="ProjectHapticWheel.html" class="button">Learn More</a></li>
+								<li><a href="ProjectBombDefusalGame.html" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Wheel1.jpg" alt="" />
+							<img src="images/bomb_light2.jpg" alt="" />
 						</div>
 					</section>
 
